@@ -11,7 +11,7 @@ Version 2.21
 
   6652, 12926, 14132, 14138, 14171, 15215, 15884, 17266, 17344, 17363,
   17370, 17371, 17411, 17460, 17475, 17485, 17501, 17506, 17508, 17522,
-  17555, 17570, 17571, 17572, 17583, 17584.
+  17555, 17570, 17571, 17572, 17573, 17583, 17584.
 
 * New locales: tu_IN, bh_IN.
 
